Sonar / mvn site cleanup based on metrics