@@ -4,7 +4,6 @@
 package dk.diku.blob.blobvis.gui;
 
 import java.awt.Component;
-import java.awt.event.ActionEvent;
 import java.io.File;
 import java.util.prefs.Preferences;
 
@@ -13,32 +12,17 @@ import javax.swing.JFileChooser;
 import javax.swing.KeyStroke;
 
 import prefuse.util.io.SimpleFileFilter;
-import dk.diku.blob.blobvis.BlobVis;
 
-public class OpenGraphAction extends AbstractAction {
+public abstract class OpenGraphAction extends AbstractAction {
 	private static final long serialVersionUID = 1L;
-	private BlobVis m_view;
-	private Preferences prefs;
 
-	public OpenGraphAction(BlobVis view, Preferences prefs) {
-		m_view = view;
-		this.prefs = prefs;
-
+	public OpenGraphAction(Preferences prefs) {
 		putValue(AbstractAction.NAME, "Open File...");
 		putValue(AbstractAction.ACCELERATOR_KEY, KeyStroke
 				.getKeyStroke("ctrl O"));
-		putValue(AbstractAction.MNEMONIC_KEY, new Integer('O'));
+		putValue(AbstractAction.MNEMONIC_KEY, Integer.valueOf('O'));
 	}
 
-	@Override
-	public void actionPerformed(ActionEvent arg0) {
-		String filename = getBlobConfigFilename(m_view,prefs);
-		if (filename == null)
-			return;
-
-		m_view.readProgramAndDataAsGraph(filename);
-
-	}
 
 	public static String getBlobConfigFilename(Component c,Preferences prefs) {
 		String lastUsedDir = prefs.get("LAST_USED_PATH", "");
@@ -52,14 +36,18 @@ public class OpenGraphAction extends AbstractAction {
 		jfc.setFileFilter(ff);
 
 		int retval = jfc.showOpenDialog(c);
-		if (retval != JFileChooser.APPROVE_OPTION)
+		if (retval != JFileChooser.APPROVE_OPTION) {
 			return null;
+		}
 
 		File f = jfc.getSelectedFile();
 		if (f != null) {
 			prefs.put("LAST_USED_PATH", f.getParent());
+			return f.getAbsolutePath();
+		}else{
+			return null;
 		}
-		return f.getAbsolutePath();
+
 
 	}
 }
